--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <title>Calculator Project</title>
 <html>
     <head>
@@ -9,13 +10,10 @@
     <body>
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="range"  id="rate" min="1" max="20" value="10.25" onchange="updateRate(this.value);"><span id="sliderValue">10.25%</span>  <br/>
-        <span id="rate_val">
-            10.25%
-        </span>
-        No. of Years <input type="number"  id="years">  <br/>
-        <select id="years">
+        Amount: <input type="number"  id="principal">  <br/>
+        Rate: <input  type="range" min="1" max="20" step="0.5" value="10.25"  onchange="rateValue(this.value);"><span id="rate_val"> 10.25% </span><br/>
+        No. of Years:  <br/>
+        <select id="selectId" type="number">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -26,13 +24,13 @@
             <option value="8">8</option>
             <option value="9">9</option>
             <option value="10">10</option>
-        </select>
+        </select><br/>
         Interest : <span id="result"></span><br>
-        <button onclick="compute()">Compute Interest</button>
+        <button onclick="compute()">Compute Interest</button><br/><br/>
         <span id="result" ></span>
+        <footer>
+            &#169; This Calculator belongs to Kierstin Kaim
+        </footer>
+        </div>
     </body>
-    <footer>
-        &#169; This Calculator belongs to Kierstin Kaim
-    </footer>
-    </div>
 </html>
